# prism_engine

./: .clang-format  CMakeLists.txt  readme.md  run
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/context/: context.cpp
src/context/public/context/: context.hpp
src/events/: CMakeLists.txt
src/events/public/events/: app_events.hpp
src/loaders/: CMakeLists.txt  glad_loader.cpp  imgui_loader.cpp  mesh_loader.cpp  vulkan_loader.cpp  window_loader.cpp
src/loaders/public/loaders/: imgui_loader.hpp  mesh_loader.hpp  vulkan_loader.hpp  window_loader.hpp
src/managers/: scene_draw_systems_manager.cpp  scene_update_systems_manager.cpp
src/managers/public/managers/: scene_draw_systems_manager.hpp
src/resources/: CMakeLists.txt  context_resources.cpp  imgui_resource.cpp  mesh_resource.cpp  render_target_resource.cpp  scene.cpp  vulkan_resource.cpp  window_resource.cpp
src/resources/public/resources/: common_resource.hpp  context_resources.hpp  imgui_resource.hpp  mesh_resource.hpp  render_target_resource.hpp  resource_storage.hpp  scene.hpp  vulkan_resource.hpp  window_resource.hpp
src/resources/public/resources/vulkan/: vk_buffer_resource.hpp  vk_command_pool_resource.hpp  vk_framebuffer_resource.hpp  vk_staging_buffer_resource.hpp
src/resources/vulkan/: vk_command_pool_resource.cpp  vk_framebuffer_resource.cpp  vk_staging_buffer_resource.cpp
src/shaders/: CMakeLists.txt  basic.frag  basic.vert
src/systems/: CMakeLists.txt  common_uniform_update_system.cpp  event_poll_system.cpp  fps_motion_control_system.cpp  gizmo_drawing_system.cpp  input_control_system.cpp  mesh_drawing_system.cpp  present_system.cpp  screen_clearing_system.cpp  ui_drawing_system.cpp  window_resize_system.cpp
src/systems/public/systems/: camera_creation_system.hpp  common_uniform_update_system.hpp  event_poll_system.hpp  fps_motion_control_system.hpp  gizmo_drawing_system.hpp  input_control_system.hpp  mesh_drawing_system.hpp  present_system.hpp  screen_clearing_system.hpp  ui_drawing_system.hpp  window_resize_system.hpp
src/ui/: CMakeLists.txt  camera_settings_ui.cpp
src/ui/public/ui/: camera_settings_ui.hpp
src/utils/: CMakeLists.txt
src/utils/public/utils/: opengl_debug.hpp
src/utils/public/utils/vulkan/: common.hpp  debug_messenger.hpp
src/utils/vulkan/: common.cpp  debug_messenger.cpp
